# DocuMind

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: exception_handlers.py  router.py
app/api/routes/: health.py
app/api/schemas/: health.py
app/domain/: __init__.py
app/domain/entities/: __init__.py  answer.py  audit_log.py  citation.py  document.py  document_chunk.py  embedding.py  organization.py  question.py  user.py
app/domain/exceptions/: __init__.py  auth_exceptions.py  base.py  document_exceptions.py  permission_exceptions.py  rag_exceptions.py  user_exceptions.py
app/domain/ports/: __init__.py  providers.py  repositories.py  security.py  storage.py  unit_of_work.py
app/domain/value_objects/: __init__.py  audit_action.py  confidence.py  document_status.py  file_type.py  metadata.py  permissions.py
app/infrastructure/database/: base.py  session.py
app/shared/config/: settings.py
app/shared/errors/: base.py
app/shared/logging/: logger.py
documind_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/api/: test_health.py
tests/unit/domain/: __init__.py  test_audit_log.py  test_confidence_score.py  test_document.py  test_document_chunk.py  test_document_status.py  test_embedding.py  test_file_type.py  test_organization.py  test_permissions.py  test_question_answer_citation.py  test_user.py
